# image-stitcher

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  descriptor.cpp  descriptor.h  harris.cpp  harris.h  main.cpp  misc.cpp  misc.h
inc/: abstract_model.h  affine_model.h  descriptor.h  eight_point.h  fund_mat_model.h  harris.h  misc.h  ransac.h
src/: eight_point.cpp  harris.cpp  main.cpp  misc.cpp
test/: affine.cpp  eigen.cpp  stitch.cpp
